@@ -46,4 +46,4 @@ class XmlParserContext(object):
     """Parser context when parsing XML elements"""
 
     def __init__(self):
-        self.schemas = SchemaRepository()
+        self.schemas = []
